--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,12 @@ dependencies:
   dio: ^5.0.3
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
+  loader_overlay: ^2.0.7
+  provider: ^6.0.4
   shared_preferences: ^2.0.18
+  mocktail: ^0.3.0
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
